# TorrentXT

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TorrentXT-IMPLEMENTATION-PLAN.md
.github/workflows/: build.yml
docs/: NEXT-EXTENSIONS-PLAN.md  TorrentXT-IMPLEMENTATION-PLAN.md  api-reference.md  architecture.md  building.md  getting-started.md  phase0-ffi-spike.md
examples/: README.md  torrent-build-ui-button.livecodescript  torrent-client.livecodescript  torrent-demo.livecodescript  torrent-dht-channel.livecodescript  torrent-dht-channels.livecodescript  torrent-dht-note.livecodescript  torrent-helpers.livecodescript  torrent-quickshare.livecodescript  torrent-rp1-chat.livecodescript  torrent-test-client.livecodescript
src/: btx_abi.h  btx_handle_table.h  btx_record.h  torrent.lcb  torrent_shim.cpp  torrent_shim.h
src/code/universal-mac/: README.md  torrentxt.dylib
src/code/x86_64-linux/: README.md
tests/: bep44_golden_test.py  record_golden_test.py  record_handle_test.cpp  rp1_integration_test.cpp  torrent-selftest.livecodescript  torrent_smoke_test.cpp
tools/: check-livecodescript.py  check-record-registry.py  package-extension.py
